--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+=== gst-python 0.8.2 ===
+
+2005-06-21  Edward Hervey  <edward@fluendo.com>
+
+	* configure.ac: 
+	* NEWS: 
+	* RELEASE:
+	Updated info for 0.8.2 release
+
 2005-06-17  Andy Wingo  <wingo@pobox.com>
 
 	* gst/gstcaps.override (_wrap_gst_caps_tp_richcompare): Increment
