--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-06-22  Thomas Vander Stichele  <thomas at apestaart dot org>
+
+	* gst/gstvalue.c:
+	  fix for #308599 - fixes deserializing gint64 types
+	* gst/parse/grammar.y:
+	  add a log line to show what type we deserialize to
+
 2005-06-21  Tim-Philipp Müller  <tim at centricular dot net>
 
 	* gst/gstformat.c:
