--- a/README
+++ b/README
@@ -48,6 +48,7 @@ Software requirements
   * libgstreamer0.10-dev >= 0.10.0
   * libgstreamer-plugins-base0.10-dev >= 0.10.0
   * libva-dev >= 0.31.0-1+sds9 (VA/GLX)
+  * libavcodec-dev >= 0.6 or with <libavcodec/vaapi.h>
 
 Hardware requirements
 
@@ -56,3 +57,23 @@ Hardware requirements
   * Intel Eaglelake (G45)
   * Intel Ironlake (HD Graphics)
   * NVIDIA platforms with PureVideo (VDPAU supported)
+
+
+Usage
+-----
+
+The GStreamer pipeline currently has to be built manually.
+i.e. neither decodebin{,2} nor playbin{,2} would select the VA-API
+elements automatically.
+
+  * Play an H.264 video with an MP4 container in fullscreen mode
+  $ gst-launch-0.10 -v filesrc location=/path/to/video.mp4 ! \
+      qtdemux ! vaapidecode ! vaapisink fullscreen=true
+
+
+Caveats
+-------
+
+  * No automatic integration within the default playbin2 pipeline
+  * No ad-hoc parser, vaapidecoder currently relies on FFmpeg
+  * MPEG-4 Part-2 (DivX) has decoding bugs
