--- a/NEWS
+++ b/NEWS
@@ -5,7 +5,7 @@ Version 0.2.1 - 13.May.2010
 * Fix OpenGL texture internal format (Clutter)
 * Fix integration within the playbin2 pipeline
 * Fix vaapidecode to expose the HW supported caps only
-* Add GstXOverlay interface to vaapisink (e.g. for Totem)
+* Add GstXOverlay interface to vaapisink (Totem media player)
 
 Version 0.2.0 - 05.May.2010
 * Relicense gst-libs/ code to LGPL v2.1+
