--- a/NEWS
+++ b/NEWS
@@ -3,6 +3,7 @@ Copyright (C) 2010 Splitted-Desktop Systems
 
 Version 0.2.2 - DD.May.2010
 * Fix packaging dependencies
+* Fix a crash in the FFmpeg decoder on close
 * Fix OpenGL texture internal format (Clutter)
 * Fix foreign window size for embedding (Totem)
 
