--- a/NEWS
+++ b/NEWS
@@ -1,7 +1,7 @@
-gst-vaapi NEWS -- summary of changes.  2010-05-DD
+gst-vaapi NEWS -- summary of changes.  2010-05-16
 Copyright (C) 2010 Splitted-Desktop Systems
 
-Version 0.2.3 - DD.May.2010
+Version 0.2.3 - 16.May.2010
 * Fix memory leak of encoded buffers
 * Fix decoder caps to report codec aliases
 * Fix VC-1 decoding through the playbin2 pipeline
